font fix on mobile devices

--- a/website/src/components/blog/blog.module.scss
+++ b/website/src/components/blog/blog.module.scss
@@ -90,8 +90,8 @@
                             align-self: stretch;
 
                             @media (width <= 460px) {
-                                font-size: 42px;
-                                line-height: 48px;
+                                font-size: 24px;
+                                line-height: 28px;
                               }
                         }
 
